image distortion  corrected

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ header {
 }
 
 .header__logo {
-  height: 100%;
+  height: auto;
   margin-right: 0.5em;
 }
 
@@ -51,7 +51,7 @@ portfolio image
 .portfolio__picture{
     margin-top: 20px;
     width: 100%;
-    height: 350px;
+    height: auto;
 }
 
 /*
